# Y2Lab_Interferometry_Coding

./: LICENSE  README.md  quick_plot.py
CrossingPoints/C++/: CMakeLists.txt  main.cpp
CrossingPoints/Python/: CrossingPoint.py  CrossingPointsAnalysis.py  Example.py
GlobalCalibration/Python/: Example.py  GlobalCalibration.py
InterferogramSimulation_Cpp/: CMakeLists.txt  cpp_simulation_result.txt
LocalCalibration/Python/: Example.py  LocalCalibration.py
Simulation/: README.md
Simulation/C++/: CMakeLists.txt  main.cpp
Simulation/Python/: Example.py  Simulation.py
